Updated .env, db.js and removed SSL certs

--- a/.env
+++ b/.env
@@ -1,6 +1,19 @@
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_PASSWORD=
+import redis from "redis";
+
+const redisClient = redis.createClient({
+  socket: {
+    host: process.env.REDIS_HOST,
+    port: process.env.REDIS_PORT,
+  },
+  password: process.env.REDIS_PASSWORD || undefined,
+});
+
+redisClient.connect()
+  .then(() => console.log("Redis connected"))
+  .catch(err => console.error("Redis error:", err));
+
+export default redisClient;
+
 
 
 
